@@ -3,7 +3,7 @@ package nbogdan.Lesson12Lambda;
 import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.Arrays;
 import java.util.Scanner;
 import java.util.regex.Pattern;
@@ -16,7 +16,7 @@ public class Task4 {
         System.out.println("Введите имя файла");
         File f = new File("src\\\\nbogdan\\\\Lesson12Lambda\\\\" + sc.nextLine());
         if (f.isFile()) {
-            text = Files.readString(Paths.get(f.toString()));
+            text = Files.readString(Path.of(f.toString()));
         } else {
             System.out.println("Такого файла не существует!");
             System.exit(0);
